Завершив практику розділу DOM

--- a/task_js_dom/side-menu/index.html
+++ b/task_js_dom/side-menu/index.html
@@ -18,8 +18,10 @@
     <meta property="og:locale" content="en_US" />
     <meta property="og:type" content="site" />
     <meta property="og:title" content="Create side menu" />
-    <meta property="og:image" content="#" />
-    <meta property="og:url" content="#" />
+    <meta
+      property="og:image"
+      content="https://task-js-dom.netlify.app/images/kottans-bg.svg" />
+    <meta property="og:url" content="https://task-js-dom.netlify.app/" />
     <meta property="og:site_name" content="Create side menu" />
     <!-- styles -->
     <link rel="stylesheet" href="./style.css" />
@@ -34,59 +36,59 @@
         <div class="sidebar__arrow" tabindex="1"></div>
       </header>
       <ul class="sidebar__menu">
-        <li class="sidebar__item" tabindex="2">
+        <li class="sidebar__item ferrari" tabindex="2">
           <img
-            class="sidebar__img"
+            class="sidebar__img ferrari"
             src="./images/ferrari.webp"
             alt="ferrari logo"
             width="28"
             height="28" />
-          <span class="sidebar__text">Ferrari</span>
+          <span class="sidebar__text ferrari">Ferrari</span>
         </li>
-        <li class="sidebar__item" tabindex="3">
+        <li class="sidebar__item lamborghini" tabindex="3">
           <img
-            class="sidebar__img"
+            class="sidebar__img lamborghini"
             src="./images/lamborghini.webp"
             alt="lamborghini logo"
             width="28"
             height="28" />
-          <span class="sidebar__text">Lamborghini</span>
+          <span class="sidebar__text lamborghini">Lamborghini</span>
         </li>
-        <li class="sidebar__item" tabindex="4">
+        <li class="sidebar__item mercedes" tabindex="4">
           <img
-            class="sidebar__img"
+            class="sidebar__img mercedes"
             src="./images/mercedes.webp"
             alt="mercedes logo"
             width="28"
             height="28" />
-          <span class="sidebar__text">Mercedes</span>
+          <span class="sidebar__text mercedes">Mercedes</span>
         </li>
-        <li class="sidebar__item" tabindex="5">
+        <li class="sidebar__item porsche" tabindex="5">
           <img
-            class="sidebar__img"
+            class="sidebar__img porsche"
             src="./images/porsche.webp"
             alt="porsche logo"
             width="28"
             height="28" />
-          <span class="sidebar__text">Porsche</span>
+          <span class="sidebar__text porsche">Porsche</span>
         </li>
-        <li class="sidebar__item" tabindex="6">
+        <li class="sidebar__item dodge" tabindex="6">
           <img
-            class="sidebar__img"
+            class="sidebar__img dodge"
             src="./images/dodge.webp"
             alt="dodge logo"
             width="28"
             height="28" />
-          <span class="sidebar__text">Dodge</span>
+          <span class="sidebar__text dodge">Dodge</span>
         </li>
-        <li class="sidebar__item" tabindex="7">
+        <li class="sidebar__item lotus" tabindex="7">
           <img
-            class="sidebar__img"
+            class="sidebar__img lotus"
             src="./images/lotus.webp"
             alt="lotus logo"
             width="28"
             height="28" />
-          <span class="sidebar__text">Lotus</span>
+          <span class="sidebar__text lotus">Lotus</span>
         </li>
       </ul>
       <footer class="sidebar__footer">
@@ -106,8 +108,8 @@
         </a>
       </footer>
     </aside>
-    <main>
-      <section class="content"></section>
+    <main class="content">
+      <section class="content__container"></section>
     </main>
     <!-- scripts -->
     <script src="./script.js"></script>
